static_content/css/style.css
html{
	overflow-y: auto;
}


body{
	background:black;
	font-family: 'Segoe UI', sans-serif;
	overflow-x: hidden;
}

#header{
	position:fixed;
	top:0px;
	left:0px;
	width:100%;
	height:70px;
	background-color:#C00;
	color:white;
	display:block;
	padding:20px;
	z-index: 200;
}

 #members{
	position: absolute;
	top:110px;
	left:10%;
	width:80%;
	text-align: center;
	perspective: 1000px;
	display: hidden;
	color:white;
}


h1{
	font-size: 50px;
	display: inline;
	font-weight: 100;
	animation-name:slideleft;
	animation-duration: 2s;
	animation-timing-function: ease-out;
	z-index:0;
}

h2{
	font-weight: 100;
	font-size:60px;
	margin:10px;
	display:inline;
}

@keyframes slideleft {
    from {margin-left:-400px;}
    to {margin-left:0px;}
 }


#content{
	position: absolute;
	top:110px;
	left:10%;
	width:80%;
	text-align: center;
	transition: all 1s;
}

.box{
	margin-top:10px;
	animation-name:fadein;
	animation-duration: 0.7s;
	perspective: 1000px;
	display: inline-block;
	position:absolute;
}

.card{
	width: 100%;
  	height: 100%;
  	transform-style: preserve-3d;
  	transition: all 0.5s;
}


.box:hover .card{
	transform:rotateX(180deg);
}

.box:active .card{
	transform:scale(0.8,0.8);
}

.card .front{
	backface-visibility: hidden;
	width:100%;
	height:100%;
	transform-style: preserve-3d;
	display: block;
	position: absolute;
	overflow: hidden;
}

.card .back{
	backface-visibility: hidden;
	transform:rotateX(180deg);
	width:100%;
	height:100%;
	transform-style: preserve-3d;
	display: block;
	position: absolute;
	z-index: -1;
}

.white{
	background-color: white;
}

.purple{
	background-color: rebeccapurple;
}


.twitterblue{
	background-color: #4099FF;
}

.bigwhitetext{
	backface-visibility: hidden;
	color:white;
	width:100%;
	transform-style: preserve-3d;
	display: block;
	position: absolute;
	opacity: 0.6;
	font-size: 150px;
	font-weight: bold;
	letter-spacing: -5px;
	text-align: left;
	left:0px;
	bottom:0px;
	overflow: hidden;
	z-index:30;
}

@keyframes fadein {
    from {opacity: 0;margin-top:40px;}
    to {opacity: 1;}
 }
 
 .cardcontent{
	 margin:20px;
 }
 
 #fadeout{
	 transition: opacity 0.8s;
	 background-color: #000;
	 position: fixed;
	 top:0px;
	 left:0px;
	 width:100%;
	 height:100%;
	 display: block;
	 opacity: 1;
	 z-index: 1000;
 }
 
  #fadeout_section{
	 transition: opacity 0.8s;
	 background-color: #000;
	 position: fixed;
	 top:0px;
	 left:0px;
	 width:100%;
	 height:100%;
	 display: block;
	 opacity: 0;
	 z-index: -1000;
 }
 
 .facepic{
	 height:150px;
	 width:150px;
	 border-radius: 75px;
	 margin:25px;
	 position:absolute;
	 left:0px;
	 transition:left 2s, transform 0.2s;
 }
 
 
 .member{
	 display:inline-block;
	 width:200px;
	 height:200px;
	 color:white;
	 margin:20px;
	 background-color: #555;
	 text-align: center;
	 transition: all 0.2s ease-out;
	 overflow:hidden;
 }
 
 .member:hover{
	 background-color: #777;
 }
 
 .member:active{
	 transform: scale(1.1,1.1);
 }
 
 .member .leftbox{
	 width:200px;
	 height:200px;
	 float:left;
 }
 
  .member .rightbox{
	 width:350px;
	 height:180px;
	 margin:10px;
	 float:right;
	 text-align:left;
 }

 .member img{
	 width:100px;
	 height:100px;
	 border-radius: 50px;
	 background-size: cover;
	 margin:15px;
 }
 
 .member h3{
	 font-weight: 500;
	 margin:5px;
 }
 
 .member h4{
	 font-weight: 100;
	 margin:0px;
 }

 .member .bio{

 }
  .member .badges{

 }
 
   .member .badge{
	 padding:8px;
	 background-color:#0F0;
	 border-radius: 8px;
	 display:inline-block;
	 margin:10px;
 }
 
  .member a{
	  color:white;
 }
 
   .member a:visited{
	  color:white;
 }


 #newsBox{
	 padding:10px;
	 width:80%;
	 background-color: rgba(0,0,0,0.6);
	 color:white;
	 position:absolute;
	 left:10%;
	 top:50px;
	 transition:top 1s;
 }
 
 .card p{
	 margin: 0;
	 margin-left:15px;
	 margin-right:15px;
   position: absolute;             
   top: 50%;                       
   transform: translate(0, -50%);
   text-align: center;
   
 }
 
 
 #join{
	position: absolute;
	top:110px;
	left:10%;
	width:80%;
	text-align: center;
	perspective: 1000px;
	display: hidden;
	color:white;
}

 #events{
	position: absolute;
	top:110px;
	left:10%;
	width:80%;
	text-align: center;
	perspective: 1000px;
	display: hidden;
	color:white;
}

 #dreamspark{
	position: absolute;
	top:110px;
	left:10%;
	width:80%;
	text-align: center;
	perspective: 1000px;
	display: hidden;
	color:white;
}


 #polls{
	position: absolute;
	top:110px;
	left:10%;
	width:80%;
	text-align: center;
	perspective: 1000px;
	display: hidden;
	color:white;
}

.event{
	display:block;
	width:100%;
	margin-bottom:10px;
	overflow:hidden;
	padding:10px;
}

.event .title{
	font-size: 30px;
}
.event .by{
 font-size: 20px;
}
.event .place{
	font-size: 20px;
}

.event .day{
	font-size: 30px;
}

.event .month{
font-size: 20px;
}
.event .time{
font-size: 20px;
}

.left{
	text-align: left;
	float:left;
}

.right{
	text-align: right;
	float:right;
}

#botButton{
	position:absolute;
	right:15%;
	top:0px;
	height:110px;
	line-height: 110px;
	padding-left: 20px;
	padding-right: 20px;
	background-color: #C00;
	font-size: 50px;
	transition: all 0.1s;
	z-index: 200;
}

#botButton:hover{
	background-color: #B00;
}

#botButton:active{
	background-color: #A00;
}

.contentSplit{
	left:0px !important;
	width:60% !important;
}

#botContainer{
	position:fixed;
	width:40%;
	right:-40%;
	height: calc( 100% - 120px );
	top:120px;
	display: block;
	background-color: white;
	transition: all 1s;
}

.botContainerActive{
	right:0% !important;
}

